# mveplayer

./: .gitlab-ci.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/log/: log.cpp  log.hpp
src/mve/: bits_dump.cpp  bits_dump.hpp  chunk.cpp  chunk.hpp  decoder.cpp  decoder.hpp  hex_dump.cpp  hex_dump.hpp
src/mve/opcode/: buffer.hpp  make_changes.sh  movie_player.cpp  movie_player.hpp  opcode.cpp  opcode.hpp  opcode_audio_frame_data.hpp  opcode_audio_frame_silence.hpp  opcode_create_gradient.hpp  opcode_create_timer.hpp  opcode_end_of_chunk.cpp  opcode_end_of_chunk.hpp  opcode_end_of_stream.hpp  opcode_initialize_audio_buffers.hpp  opcode_initialize_video_buffer.cpp  opcode_initialize_video_buffer.hpp  opcode_initialize_video_mode.cpp  opcode_initialize_video_mode.hpp  opcode_send_buffer_to_display.cpp  opcode_send_buffer_to_display.hpp  opcode_set_decoding_map.cpp  opcode_set_decoding_map.hpp  opcode_set_palette.cpp  opcode_set_palette.hpp  opcode_set_palette_entries_compressed.hpp  opcode_start_stop_audio.hpp  opcode_type.hpp  opcode_video_data.cpp  opcode_video_data.hpp  scanner_b.cpp  scanner_b.hpp  video_opcode.cpp  video_opcode.hpp
tests/: CMakeLists.txt  bytes.hpp  test_chunk.cpp  test_decoder.cpp  test_movie_player.cpp  test_opcode_end_of_chunk.cpp  test_opcode_initialize_video_buffer.cpp  test_opcode_set_decoding_map.cpp  test_opcode_set_palette.cpp  test_opcode_video_data_encoding_00.cpp  test_opcode_video_data_encoding_01.cpp  test_opcode_video_data_encoding_02.cpp  test_opcode_video_data_encoding_03.cpp  test_opcode_video_data_encoding_04.cpp  test_opcode_video_data_encoding_05.cpp  test_opcode_video_data_encoding_06.cpp  test_opcode_video_data_encoding_07.cpp  test_opcode_video_data_encoding_08.cpp  test_opcode_video_data_encoding_09.cpp  test_opcode_video_data_encoding_0a.cpp  test_opcode_video_data_encoding_0b.cpp  test_opcode_video_data_encoding_0c.cpp  test_opcode_video_data_encoding_0d.cpp  test_opcode_video_data_encoding_0e.cpp  test_opcode_video_data_encoding_0f.cpp
